# turnflow_backend

./: .dockerignore  .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  AI_PAGE_GENERATION_GUIDE.md  AUTODM_DELIVERY_LIFECYCLE.html  AUTODM_DELIVERY_LIFECYCLE.md  CAMPAIGN_TIMESERIES_FRONTEND.md  CANCEL_RETENTION_FRONTEND.md  CLAUDE.md  CLOUDFLARE_TUNNEL_SETUP.md  CONNECT_CONFLICT_WARNING_FRONTEND.md  DISCONNECT_OTHER_DM_TOOLS_GUIDE.md  DM_CAMPAIGN_DUPLICATE_PREVENTION_FRONTEND.md  DM_CAMPAIGN_MIGRATION_FRONTEND.md  DM_QUEUE_STATE_FRONTEND.md  DM_RECOVERY_FRONTEND.md  DR_IMPLEMENTATION_PLAN.md  Dockerfile  EMAIL_TEMPLATE_HANDOFF_FOR_CS.md  IG_ACCOUNT_ACTIVATION_FRONTEND.md  INSTAGRAM_OAUTH_FLOW.md  INSTAGRAM_TEST_GUIDE.md  Makefile  NGROK_INSTAGRAM_SETUP.md  PASSWORD_RESET_GUIDE.md  README.md  SECURITY_AUDIT_2026-06.md  SERVICE_DIFFERENTIATION.md  SIGNUP_ATTRIBUTION_FRONTEND.md  STEP1_COMPLETION.md  STEP2_COMPLETION.md  STEP3_COMPLETION.md  STEP4_COMPLETION.md  STEP5_COMPLETION.md  TOSS_BILLING_FRONTEND.md  (+13 more)
.claude/: settings.local.json
ai_assets/: ai-page-generation-playbook.md
api-mcp/: README.md  pyproject.toml  smoke_test.py
api-mcp/.cursor/: mcp.json.example
api-mcp/src/company_api_mcp/: normalize.py  resolver.py  search.py  server.py  spec_loader.py
config/: api_urls.py  asgi.py  celery.py  urls.py  wsgi.py
deploy/: MY_ACTION_PLAN.md  SERVER_RUNBOOK.md  STAGING_LOADTEST.md
docs/: backend-auto-dm-list-enhancements.md
scripts/: inspect_route.py  list_urls.py  preview_emails.py  (+1 more)
(+511 files in other folders)
